// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TableOrderIcon /> > renders an icon when all conditions are met 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-caret-down ml-1"
  data-icon="caret-down"
  data-prefix="fas"
  role="img"
  viewBox="0 0 320 512"
>
  <path
    d="M140.3 376.8c12.6 10.2 31.1 9.5 42.8-2.2l128-128c9.2-9.2 11.9-22.9 6.9-34.9S301.4 192 288.5 192l-256 0c-12.9 0-24.6 7.8-29.6 19.8S.7 237.5 9.9 246.6l128 128 2.4 2.2z"
    fill="currentColor"
  />
</svg>
`;

exports[`<TableOrderIcon /> > renders an icon when all conditions are met 2`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-caret-up ml-1"
  data-icon="caret-up"
  data-prefix="fas"
  role="img"
  viewBox="0 0 320 512"
>
  <path
    d="M140.3 135.2c12.6-10.3 31.1-9.5 42.8 2.2l128 128c9.2 9.2 11.9 22.9 6.9 34.9S301.4 320 288.5 320l-256 0c-12.9 0-24.6-7.8-29.6-19.8S.7 274.5 9.9 265.4l128-128 2.4-2.2z"
    fill="currentColor"
  />
</svg>
`;
